err/cloudshell-orch-core.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Inject-3.3.1.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell'...
Compiling './lib/python3.5/site-packages/cloudshell/__init__.py'...
Listing './lib/python3.5/site-packages/cloudshell/api'...
Listing './lib/python3.5/site-packages/cloudshell/configuration'...
Listing './lib/python3.5/site-packages/cloudshell/core'...
Listing './lib/python3.5/site-packages/cloudshell/core/context'...
Listing './lib/python3.5/site-packages/cloudshell/core/logger'...
Compiling './lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py'...
***   File "./lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py", line 82
    print "Environment variable is not defined in the template {}".format(tpl)
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/helpers/scripts'...
Compiling './lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py'...
***   File "./lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py", line 110
    print 'No config file found at:', filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudshell/shell'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/dependency_injection'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/session'...
Listing './lib/python3.5/site-packages/cloudshell/tests'...
Listing './lib/python3.5/site-packages/cloudshell/tests/driver_bootstrap'...
Listing './lib/python3.5/site-packages/cloudshell/workflow'...
Listing './lib/python3.5/site-packages/cloudshell/workflow/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/workflow/orchestration'...
Compiling './lib/python3.5/site-packages/cloudshell/workflow/orchestration/sandbox.py'...
***   File "./lib/python3.5/site-packages/cloudshell/workflow/orchestration/sandbox.py", line 125
    print error
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudshell/workflow/orchestration/setup'...
Listing './lib/python3.5/site-packages/cloudshell/workflow/orchestration/teardown'...
Listing './lib/python3.5/site-packages/cloudshell/workflow/profiler'...
Listing './lib/python3.5/site-packages/cloudshell_automation_api-8.2.0.111.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_core-2.2.180.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_orch_core-1.5.0.214.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_shell_core-2.3.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/core/logger'...
Listing './lib/python3.5/site-packages/tests/core/logger/config'...
Listing './share'...
Listing './share/python-wheels'...
